@@ -42,7 +42,7 @@ class FakeListener:
     def stateAppend(self, state, key, value): pass
     def stateRemove(self, state, key, value): pass
 
-class TestRoot(pb.Root):
+class TestRoot(common.TestManagerRoot):
     def remote_getState(self):
         self.state = TestStateCacheable()
         self.state.addKey('name', 'lois')
